feat: implemented multimodal ai, smart prompting and tests